# hello-rust

./: .env  Cargo.toml  docker-compose.yml
src/: database.rs  errors.rs  handlers.rs  main.rs  models.rs
